# CrewAI-Labs

guide_creator_flow/: pyproject.toml
guide_creator_flow/output/: complete_guide.md  guide_outline.json
guide_creator_flow/src/guide_creator_flow/: main.py
guide_creator_flow/src/guide_creator_flow/crews/content_crew/config/: agents.yaml
guide_creator_flow/src/guide_creator_flow/crews/poem_crew/: poem_crew.py
sales_flow/: README.md  crewai_flow.html  pyproject.toml
sales_flow/src/sales_flow/: main.py  prices.json  stock.json
trip_planner/: .env-sample  .gitignore  pyproject.toml
trip_planner/src/pydantic_models/: DailyPlan.py  SightseeingPlan.py
trip_planner/src/tools/: custom_tool.py
trip_planner/src/trip_planner/: crew.py
trip_planner/src/trip_planner/config/: agents.yaml
